--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
+    "ng2-nouislider": "^1.8.3",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "nouislider": "^14.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
