--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
+                "src/_redirects.ts",
               "src/assets"
             ],
             "styles": [
